...
        if let profile = profileService.profile {
            view?.updateProfileDetails(with: profile)
        }
    }
    
    func didTapLogoutButton() {
        let yesAction = AlertAction(buttonText: "Да", isPreferred: true) { [weak self] in
            self?.didConfirmLogout()
        }
        
        let noAction = AlertAction(buttonText: "Нет") { [weak self] in
            self?.view?.dismissAlert()
        }
        
        let alertModel = AlertModel(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            actions: [
                yesAction,
                noAction
            ])
        
...
