...
            case .success(_):
                completion()
            case .failure(_):
                break
            }
        }
        likeButton.accessibilityIdentifier = isLiked ? "like_button_on" : "like_button_off"
    }
    
    func setIsLiked(isLiked: Bool) {
        guard let likedImage = UIImage(named: isLiked ? "active" : "not_active") else {
            print("ImagesListCell.configure - ImageError: Unable to create like image")
            return
...
